--- a/js_short_exercises.html
+++ b/js_short_exercises.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <title>short exercises</title>
 </head>
 
 <body>
