--- a/js_short_exercises.html
+++ b/js_short_exercises.html
@@ -58,6 +58,10 @@
         button.addEventListener('click', function() {
             console.log('test');
         });
+
+        //7.
+        document.querySelectorAll("#contact1 li span").forEach(item => item.style.color = "#3cb371");
+        document.querySelectorAll("#contact2 li span").forEach(item => item.style.color = "#ace1af");
     </script>
 </body>
 
